...
        }
      }
    },
    "Could Not Report" : {

    },
    "Could Not Save" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تعذّر الحفظ"
          }
...
            "state" : "translated",
            "value" : "历史记录"
          }
        }
      }
    },
    "Home" : {
      "comment" : "Root tab bar label",
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "关闭"
          }
        }
      }
    },
    "OK" : {
      "comment" : "Generic alert dismiss button",
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "RSS 订阅"
          }
        }
      }
    },
    "Save to Watch Later" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "حفظ لمشاهدته لاحقًا"
          }
...
            "state" : "translated",
            "value" : "已保存到相册"
          }
        }
      }
    },
    "Saved to Watch Later" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "محفوظ لمشاهدته لاحقًا"
          }
...
            "state" : "translated",
            "value" : "设置"
          }
        }
      }
    },
    "Share" : {
      "comment" : "Player more-menu option to share the video link",
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
